--- a/.github/workflow/snake.yml
+++ b/.github/workflow/snake.yml
@@ -1,34 +1,28 @@
-name: Generate snake animation
+name: Snake Animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
-  workflow_dispatch:
-
   push:
     branches:
-    - master
+      - main
 
 jobs:
-  generate:
-    permissions:
-      contents: write
+  update-snake:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
     steps:
-      - name: generate snake.svg
-        uses: Platane/snk/svg-only@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Generate snake
+        uses: Platane/snk@master
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
+          github_user: 'Kirito72-hub' # Your GitHub username
+          svg_out: 'output/snake.svg'
+          # Other options can be added here
 
-
-      - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit snake
+        run: |
+          git config --local user.email "you@example.com"
+          git config --local user.name "Your Name"
+          git add output/snake.svg
+          git commit -m "Update snake"
+          git push
